# pokemonred_puffer

./: .gitignore  cleanrl_puffer.py  compare.yaml  config.yaml  env_creator.py  environment.py  pyproject.toml  ram_map.py  run.sh  test.yaml  train.py
pokemonred_puffer/: c_gae.pyx  cleanrl_puffer.py  constants.py  data.py  env_creator.py  environment.py  eval.py  events.json  game_map.py  global_map.py  map_data.json  policies.py  profile.py  pyboy_step_handler.py  ram_addresses.py  ram_map.py  ram_map_leanke.py  resnet.py  stage_manager.py  train.py
pokemonred_puffer/data_files/: events.py  field_moves.py  items.py  map.py  missable_objects.py  species.py  strength_puzzles.py  tilesets.py  tm_hm.py
pokemonred_puffer/policies/: __init__.py  boey_obs.py  multi_convolutional.py  policies.py
pokemonred_puffer/pyboy_states/stock_starting_states/: fuchsia_beat_koga_ready_to_surf.state  game_corner_by_poster.state  outside_silph_co_guard_sleeping.state  pokemon_mansion.state  victory_road_pokemon_center_birds_gyr.state  viridian_all_badges_gyar_arti.state
pokemonred_puffer/rewards/: baseline.py  teach_cut_v1.py
pokemonred_puffer/wrappers/: async_io.py  boey_obs_encode.py  episode_stats.py  exploration.py  stage_manager_wrapper.py  stream_wrapper.py
policies/: multi_convolutional.py
rewards/: __init__.py  teach_cut_v1.py
saved_states/general_saved_states/: cinnibar_pokemon_center_safe_load.state  seafoam_islands_complete_stuck_safe_load.state
tests/: run_tests.py  test_battery.py  test_environment.py  test_get_badges.py  test_get_max_steps.py  test_read_hp_fraction.py  test_scale_map_id.py
wrappers/: __init__.py  stream_wrapper.py
wrappers/environment/: __init__.py  exploration.py
wrappers/policy/: __init__.py  policies.py
wrappers/rewards/: __init__.py  teach_cut_v1.py
wrappers/visualization/: __init__.py  stream_wrapper.py
