[project]
name = "pokemonred-puffer"
version = "0.0.1"
description = "Play Pokemon Red...with PufferLib!."
keywords = []
classifiers = [
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "einops",
    "opencv-python",
    "numpy",
    "pyboy>=2",
    "pufferlib[cleanrl]>=0.7.3, <1.0",
    "torch>=2.1",
    "torchvision",
    "wandb",
    "gymnasium",
    "pettingzoo",
    "websockets",
    "gym",
    "matplotlib",
    "mediapy",
    "scikit-image",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[project.optional-dependencies]
monitoring = [
    "nvitop"
]
dev = [
    "ruff"
]

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[project.entry-points.console_scripts]
pokegym-play = "pokemonred_puffer.environment:play"
